@@ -42,6 +42,9 @@ version 0.59 (06/07/2002):
 	  entirely
 	* Gaim can now handle messages from Mac ICQ and Miranda ICQ
 	  (Thanks, Mark Doliner)
+	* Added Mozilla to browser options and changed KFM to 
+	  Konqueror.
+	* Can now set the server and port for MSN and Napster
 
 version 0.58 (05/13/2002):
 	* Bulgarian translation added (Thanks, Igel Itzo)
